Revert "fix second image on mobile"
This reverts commit 72112dde5f42d7c4486585af4aa5b288054e85c0.

--- a/static/css-custom/custom.css
+++ b/static/css-custom/custom.css
@@ -3,9 +3,5 @@
     background-size: cover;
     background-position: center;
   }
-
-  img{
-    max-width: 100%;
-  }
 }
 
